istio/istio-manifest/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fade-rosyad-gateway-api
spec:
  selector:
    istio: istio-ingressgateway
  servers:
  # - hosts:
  #   - 34.171.120.56.nip.io
  #   port:
  #     name: https
  #     number: 443
  #     protocol: HTTPS
  #   tls:
  #     cipherSuites:
  #     - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
  #     - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256
  #     - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
  #     - TLS_AES_128_GCM_SHA256
  #     - TLS_AES_256_GCM_SHA384
  #     - TLS_CHACHA20_POLY1305_SHA256
  #     credentialName: fade-rosyad-ssl
  #     maxProtocolVersion: TLSV1_3
  #     minProtocolVersion: TLSV1_2
  #     mode: SIMPLE
  - hosts:
    - 34-171-120-56.sslip.io
    port:
      name: http
      number: 80
      protocol: HTTP2
    tls:
      httpsRedirect: true
